js262/test/language/expressions/assignmenttargettype/parenthesized-primaryexpression-classexpression.js


/*---
description: PrimaryExpression ClassExpression; Return invalid. (ParenthesizedExpression)
esid: sec-grouping-operator-static-semantics-assignmenttargettype
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    ParenthesizedExpression: (Expression)

    Return AssignmentTargetType of Expression.
---*/

$DONOTEVALUATE();

(class {}) = 1;
